# fuel_mileage_api

./: Cargo.toml  Rocket.toml  deploy.sh  fillup.db  my.sql  test_request.http
src/: fillup.rs  main.rs
static/: index.html
